# http_library

./: CMakeLists.txt
.monkeycode/specs/cpp-http-library/: design.md  requirements.md  tasklist.md
demo/: http_client_demo.cpp  http_server_demo.cpp  ws_client_demo.cpp  ws_server_demo.cpp
include/cpphttp/: buffer.hpp  config.hpp  cpphttp.hpp  error.hpp  version.hpp
include/cpphttp/api/: http_client.hpp  http_server.hpp  http_types.hpp  ws_client.hpp  ws_server.hpp
include/cpphttp/core/: connection.hpp  pool.hpp  router.hpp  session.hpp
include/cpphttp/core/codec/: http_codec.hpp  ws_codec.hpp
include/cpphttp/platform/: asio_wrapper.hpp
src/: cpphttp.cpp
src/api/: http_client.cpp  http_server.cpp  http_types.cpp  ws_client.cpp  ws_server.cpp
src/core/: buffer.cpp  connection.cpp  router.cpp  session.cpp
src/core/codec/: http_codec.cpp  ws_codec.cpp
src/platform/: asio_wrapper.cpp
test/: buffer_test.cpp  http_codec_test.cpp  main.cpp  router_test.cpp  ws_codec_test.cpp
